hphp/hack/test/typecheck/is_expression/invalid_hint_void.php
<?hh // strict

function foo(mixed $x): void {
  if ($x is void) {
    hh_show($x);
  }
}
